# tiny-mirror

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
src/tiny_mirror/: __init__.py
src/tiny_mirror/core/: __init__.py  config.py  llama_cpp.py
src/tiny_mirror/procedures/: __init__.py
src/tiny_mirror/procedures/summaries/: __init__.py  concerning.py
src/tiny_mirror/procedures/summaries/data/: prompt.gbnf  prompt.txt  reframe_templates.txt  support_templates.txt
tests/: __init__.py
